Fix compound download button overflowing small viewports

--- a/styles/about.css
+++ b/styles/about.css
@@ -66,10 +66,13 @@ a[href^="https://98.js.org"]:focus #wooden-window-frame {
 }
 
 #desktop-app-section #compound-download-button {
+	--active-background-color: rgb(192, 192, 192);
+	--toggle-width: 40px;
+	--external-margin: 10px;
 	position: relative;
 	width: fit-content;
+	max-width: calc(100vw - var(--external-margin) * 2 - var(--toggle-width));
 	z-index: 1;
-	--active-background-color: rgb(192, 192, 192);
 }
 #desktop-app-section #compound-download-button details {
 	/* Resetting overly broad details { margin-top: 8px; } from layout.css */
@@ -80,6 +83,8 @@ a[href^="https://98.js.org"]:focus #wooden-window-frame {
 	left: 100%;
 	top: 0;
 	bottom: 0;
+	width: var(--toggle-width);
+	text-align: center;
 	box-sizing: border-box;
 	border: 4px solid black;
 	border-left: none;
@@ -98,6 +103,8 @@ a[href^="https://98.js.org"]:focus #wooden-window-frame {
 	position: absolute;
 	left: 0;
 	width: 600px;
+	box-sizing: border-box;
+	max-width: calc(100vw - var(--external-margin) * 2);
 	--border-width: 4px;
 	top: calc(100% - var(--border-width));
 	z-index: -1;
